--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">HEADER LOGO</div>
+        <div class="logo">PET EXPRESS</div>
         <ul class="links">
             <li><a href="#info">The Process</a></li>
             <li><a href="#quote">Today's Quote</a></li>
